# SanderlingCPP

./: .gitignore  CMakeLists.txt  README.md
EVEOnline-Helper/: CMakeLists.txt  EVEOnline-Helper.cpp  EVEOnline-Helper.h  EVEOnlineReader.cpp  EVEOnlineReader.h  ProcessMemoryReader.cpp  ProcessMemoryReader.h  PythonMemoryReader.cpp  PythonMemoryReader.h  sanderling_api.h
PyWrapper/: CMakeLists.txt  sanderling.cpp  sanderling.h
Test/: CMakeLists.txt  EVEOnline-Helper.cpp  EVEOnline-Helper.h  test.cpp  test.h
libsanderling/: CMakeLists.txt  EVEOnlineReader.cpp  ProcessMemoryReader.h  PythonMemoryReader.h  common.h
